k8s/backend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: backend-restricted-egress

spec:
  podSelector:
    matchLabels:
      app: backend

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379

    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - protocol: TCP
          port: 9092

    - to:
        - ipBlock:
            cidr: 10.2.5.143/32
      ports:
        - protocol: TCP
          port: 5432

    - to: []
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
